--- a/src/pipboy/pipboy.fxml
+++ b/src/pipboy/pipboy.fxml
@@ -4,8 +4,9 @@
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pipboy.Controller">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#handleKeyPressed" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pipboy.Controller">
     <stylesheets>
         <URL value="@styles.css" />
     </stylesheets>
@@ -14,5 +15,8 @@
       <ToggleButton fx:id="powerButton" mnemonicParsing="false" onAction="#powerButtonOnClick" />
       <ImageView fx:id="geigerPointer" fitHeight="41.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="lights" fitHeight="289.0" fitWidth="133.0" pickOnBounds="true" preserveRatio="true" />
+      <HBox fx:id="gifAnimation1" prefHeight="100.0" prefWidth="200.0" />
+      <ImageView fx:id="RadioPointer" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="myGif" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
