removed date from background

--- a/src/pipboy/styles.css
+++ b/src/pipboy/styles.css
@@ -1,6 +1,6 @@
 
 .backgroundPipBoy{
-    -fx-background-image: url('/pipboy/img/pipboy.png');
+    -fx-background-image: url('/pipboy/img/pipboyNoDate.png');
 }
 
 
